--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Aframe Boilerplate</title>
-    <!-- Import vendor before the app is loaded --!>
+    <!-- Import vendor before the app is loaded -->
     <script type="text/javascript" src="vendor.bundle.js"></script>
-    <!-- Your app entry --!>
+    <!-- Your app entry -->
     <script type="text/javascript" src="app.bundle.js"></script>
   </head>
   <body>
-    <!-- Empty scene --!>
+    <!-- Empty scene -->
     <a-scene>
     </a-scene>
   </body>
